--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,14 +10,20 @@
   "scope": "/",
   "icons": [
     {
-      "src": "/images/logo/1.png",
+      "src": "/images/favicon/f2.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/images/favicon/f2.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
       "src": "/images/favicon/f2.png",
-      "sizes": "192x192",
+      "sizes": "180x180",
       "type": "image/png",
       "purpose": "any"
     }
